# github-windows-action-test

./: CMakeLists.txt  main.cpp  requirements.txt  test.cpp  test.hpp
.github/workflows/: macos_action.yml  msvc_windows.yml
cmake/: check_python_libs.cmake
